--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,24 @@ html {
   font-size: 62.5%;
 }
 
+@media (max-width: 991px) {
+  html {
+    font-size: 60%;
+  }
+}
+
+@media (max-width: 767px) {
+  html {
+    font-size: 55%;
+  }
+}
+
+@media (max-width: 575px) {
+  html {
+    font-size: 50%;
+  }
+}
+
 body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -79,6 +97,12 @@ body {
   font-family: "Cairo";
 }
 
+@media (max-width: 991px) {
+  .heading-primary {
+    font-size: 6rem;
+  }
+}
+
 .heading-primary-inner-mod {
   color: #f50057;
 }
@@ -92,6 +116,12 @@ body {
   position: relative;
 }
 
+@media (max-width: 991px) {
+  .heading__aboutme {
+    font-size: 3rem;
+  }
+}
+
 .heading__aboutme::after {
   content: "";
   position: absolute;
@@ -100,6 +130,12 @@ body {
   background-color: #f50057;
   top: 7rem;
   left: 0rem;
+}
+
+@media (max-width: 767px) {
+  .heading__aboutme::after {
+    display: none;
+  }
 }
 
 .heading__service-small {
@@ -111,6 +147,21 @@ body {
 .heading__services {
   font-size: 4rem;
   padding: 0 22rem;
+}
+
+@media (max-width: 991px) {
+  .heading__services {
+    font-size: 3rem;
+    padding: 0 15rem;
+    margin-bottom: 4rem;
+  }
+}
+
+@media (max-width: 575px) {
+  .heading__services {
+    font-size: 2rem;
+    padding: 0 4rem;
+  }
 }
 
 .heading-service-1 {
@@ -472,10 +523,35 @@ body {
       grid-template-columns: 1fr 1fr;
 }
 
+@media (max-width: 767px) {
+  .header-area .hero-section {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+}
+
 .header-area .hero-section .intro {
   margin-left: 2rem;
   -webkit-animation: leftToRight 0.7s ease-out;
           animation: leftToRight 0.7s ease-out;
+}
+
+@media (max-width: 991px) {
+  .header-area .hero-section .intro {
+    margin-left: 6rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .header-area .hero-section .intro {
+    text-align: center;
+  }
+}
+
+@media (max-width: 575px) {
+  .header-area .hero-section .intro {
+    margin-left: 0;
+  }
 }
 
 .header-area .hero-section .intro__greet {
@@ -483,6 +559,12 @@ body {
   font-family: "Cairo", sans-serif;
   color: #a09b9b;
   margin-bottom: -4rem;
+}
+
+@media (max-width: 991px) {
+  .header-area .hero-section .intro__greet {
+    margin-bottom: -3rem;
+  }
 }
 
 .header-area .hero-section .intro__list {
@@ -552,6 +634,14 @@ body {
   transition: all 0.4s;
 }
 
+@media (max-width: 767px) {
+  .section-about .about {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    text-align: center;
+  }
+}
+
 .section-about .about__info {
   margin-left: 2rem;
   display: -ms-grid;
@@ -563,6 +653,18 @@ body {
 
 .section-about .about__info .aboutme {
   margin-top: -25rem;
+}
+
+@media (max-width: 991px) {
+  .section-about .about__info .aboutme {
+    margin-top: -5rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .section-about .about__info .aboutme {
+    margin-top: 2rem;
+  }
 }
 
 .section-about .about__info .aboutme .btn-about-info {
@@ -577,9 +679,50 @@ body {
   text-align: justify;
 }
 
+@media (max-width: 767px) {
+  .section-about .about__info .aboutme__intro {
+    margin-top: 1rem;
+    padding-right: 0rem;
+    padding: 0 8rem;
+    text-align: justify;
+    margin-bottom: 4rem;
+  }
+}
+
+@media (max-width: 575px) {
+  .section-about .about__info .aboutme__intro {
+    padding: 0 4rem;
+  }
+}
+
+@media (max-width: 991px) {
+  .section-about .about__info .aboutme-skills {
+    margin-top: 4rem;
+  }
+}
+
+@media (max-width: 991px) {
+  .section-about .about__info .aboutme-experience {
+    margin-top: -12rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .section-about .about__info .aboutme-experience {
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+  }
+}
+
 .section-about .about__info .skill__info .skills {
   margin-top: 4rem;
   width: 50%;
+}
+
+@media (max-width: 767px) {
+  .section-about .about__info .skill__info .skills {
+    width: 100%;
+  }
 }
 
 .section-about .about__info .skill__info .skills .badge {
@@ -627,6 +770,13 @@ body {
   background-color: #fff;
   padding: 3rem 2rem;
   margin-right: 2rem;
+}
+
+@media (max-width: 991px) {
+  .service-1 {
+    margin-right: 2rem;
+    margin-left: 2rem;
+  }
 }
 
 .service-1 .service-icon .fa-file-code {
@@ -682,6 +832,26 @@ body {
   margin-top: 4rem;
 }
 
+@media (max-width: 991px) {
+  .work {
+    margin: 3rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .work {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 575px) {
+  .work {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+  }
+}
+
 .work-1 {
   position: relative;
 }
@@ -705,6 +875,13 @@ body {
           transform: translate(0%, 69%);
 }
 
+@media (max-width: 991px) {
+  .work-1-info-mod {
+    -webkit-transform: translate(-7%, 36%);
+            transform: translate(-7%, 36%);
+  }
+}
+
 .work-1-img {
   width: 100%;
 }
@@ -726,6 +903,13 @@ body {
   grid-gap: 5rem;
 }
 
+@media (max-width: 767px) {
+  .contact {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+  }
+}
+
 .contact-left {
   display: -ms-grid;
   display: grid;
@@ -736,6 +920,12 @@ body {
 
 .contact-left-img {
   width: 100%;
+}
+
+@media (max-width: 767px) {
+  .contact-right {
+    text-align: -webkit-center;
+  }
 }
 
 .contact-right-header {
@@ -749,8 +939,27 @@ body {
       grid-template-columns: 1fr 1fr;
 }
 
+@media (max-width: 991px) {
+  .contact-right-info {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 991px) {
+  .contact-right-info-email {
+    margin-top: 2rem;
+  }
+}
+
 .contact-right-info-email:not(:last-child) {
   margin-right: 5rem;
+}
+
+@media (max-width: 767px) {
+  .contact-right-info-email:not(:last-child) {
+    margin-right: 0rem;
+  }
 }
 
 .contact-right-info-email-address {
@@ -776,6 +985,12 @@ body {
   border: 0.1rem solid #f50057;
 }
 
+@media (max-width: 991px) {
+  .contact-form-name {
+    width: 80%;
+  }
+}
+
 .contact-form-phone {
   width: 100%;
   padding: 1rem 1.5rem;
@@ -789,6 +1004,12 @@ body {
 
 .contact-form-phone:focus {
   border: 0.1rem solid #f50057;
+}
+
+@media (max-width: 991px) {
+  .contact-form-phone {
+    width: 80%;
+  }
 }
 
 .contact-form-email {
@@ -807,6 +1028,12 @@ body {
   border: 0.1rem solid #f50057;
 }
 
+@media (max-width: 991px) {
+  .contact-form-email {
+    width: 80%;
+  }
+}
+
 .contact .social-media {
   margin-top: 4rem;
 }
@@ -820,6 +1047,13 @@ body {
   margin-top: 1rem;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
+}
+
+@media (max-width: 767px) {
+  .contact .social-media-handle-link, .contact .social-media-handle-link:link, .contact .social-media-handle-link:visited {
+    margin-right: 0rem;
+    margin-left: 1rem;
+  }
 }
 
 .contact .social-media-handle-link:hover {
@@ -837,6 +1071,14 @@ body {
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
   grid-gap: 1rem;
+}
+
+@media (max-width: 767px) {
+  .footer {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+    margin: 4rem;
+  }
 }
 
 .footer-left {
@@ -868,6 +1110,12 @@ body {
   color: #fff;
 }
 
+@media (max-width: 767px) {
+  .footer-middle {
+    margin-left: 0;
+  }
+}
+
 .footer-middle .service-list {
   list-style: none;
   margin-top: 3rem;
@@ -890,6 +1138,12 @@ body {
 .footer-right {
   color: #fff;
   margin-left: 5rem;
+}
+
+@media (max-width: 767px) {
+  .footer-right {
+    margin-left: 0;
+  }
 }
 
 .footer-right-phone {
