--- a/scss/pages/_section.scss
+++ b/scss/pages/_section.scss
@@ -15,6 +15,11 @@
     grid-column-gap: 1rem;
     transition: all 0.4s;
 
+    @include respond(phone) {
+      grid-template-columns: 1fr;
+      text-align: center;
+    }
+
     &__info {
       margin-left: 2rem;
       display: grid;
@@ -22,6 +27,14 @@
 
       .aboutme {
         margin-top: -25rem;
+
+        @include respond(tab) {
+          margin-top: -5rem;
+        }
+        @include respond(phone) {
+          margin-top: 2rem;
+        }
+
         .btn-about-info {
           margin-top: 4rem;
         }
@@ -32,6 +45,30 @@
           margin-top: 4rem;
           padding-right: 13rem;
           text-align: justify;
+          @include respond(phone) {
+            margin-top: 1rem;
+            padding-right: 0rem;
+            padding: 0 8rem;
+            text-align: justify;
+            margin-bottom: 4rem;
+          }
+          @include respond(xsPhone) {
+            padding: 0 4rem;
+          }
+        }
+        &-skills {
+          @include respond(tab) {
+            margin-top: 4rem;
+          }
+        }
+        &-experience {
+          @include respond(tab) {
+            margin-top: -12rem;
+          }
+          @include respond(phone) {
+            margin-top: 4rem;
+            margin-bottom: 4rem;
+          }
         }
       }
 
@@ -39,6 +76,9 @@
         .skills {
           margin-top: 4rem;
           width: 50%;
+          @include respond(phone) {
+            width: 100%;
+          }
           .badge {
             color: $color-white-1;
             background-color: $color-secondary;
