--- a/scss/abstract/_variable.scss
+++ b/scss/abstract/_variable.scss
@@ -5,7 +5,8 @@ $nav-font: "Cairo", sans-serif;
 // font colors
 
 $color-primary: #00b0ff;
-$color-secondary: #f50057;
+// $color-secondary: #f50057;
+$color-secondary: #3790b5;
 
 $color-black-1: #131313;
 
